--- a/ShoeDatabase/KoOrderRegister.csproj
+++ b/ShoeDatabase/KoOrderRegister.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3433B8E3-8392-434C-81CD-38879F68AFAE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ShoeDatabase</RootNamespace>
-    <AssemblyName>ShoeDatabase</AssemblyName>
+    <RootNamespace>KoOrderRegister</RootNamespace>
+    <AssemblyName>KoOrderRegister</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
