--- a/KoOrderRegister/KoOrderRegister.csproj
+++ b/KoOrderRegister/KoOrderRegister.csproj
@@ -21,10 +21,10 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>KoOrderRegister</ApplicationTitle>
+		<ApplicationTitle>Ko Order Register</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.koorderregister</ApplicationId>
+		<ApplicationId>hu.kncsk.koorderregister</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -66,6 +66,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\add_dark.svg" />
+	  <None Remove="Resources\Images\add_light.svg" />
 	  <None Remove="Resources\Images\ai_dark.svg" />
 	  <None Remove="Resources\Images\ai_light.svg" />
 	  <None Remove="Resources\Images\ai_off_dark.svg" />
